2004-03-19  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (update_uris_for_selection): if
	gnome_calendar_add_event_source fails, don't add the client to the
	internal client list.

2004-03-19  JP Rosevear <jpr@ximian.com>

	* gui/e-day-view.c (process_component): compare ecalcomponents,
	not icalcomponents (the compare func is borked), check recurrence
	changes better
	(e_day_view_init): just use the model the parent creates

	* gui/e-week-view.c (process_component): create the temporary item
	from the correct icalcomp
	(e_week_view_init): just use the model the parent creates

2004-03-18  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/select-source-dialog.c (select_source_dialog): create
	an ESourceSelector instead of a ESourceOptionMenu, to be consistent
	with the other components, and create a scrolled window to hold the
	source selector.
	(primary_selection_changed_cb): callback for "primary_selection_changed"
	signal in the ESourceSelector.

2004-03-18  Alfred Peng <alfred.peng@sun.com>

	* Fix #51187 on bugzilla of ximian
	* gui/alarm-notify/alarm-queue.c (query_objects_changed_cb):
	If "alarms" or "alarms->alarms" is NULL after querying a calendar
	for the alarms of a particular object, the reuse of "cqa" will
	probably cause evolution-alarm-notify to crash.
	So remove "cqa" when "alarms" or "alarms->alarms" is NULL. Otherwise
	update it.

2004-03-17  hpnadig  <hp@ndeepak.info>

	* gui/dialogs/task-page.glade: Capitalized words changed. Solves 48115.

	* gui/dialogs/task-details-page.glade: s/Date Completed/Date completed.

	* gui/e-calendar-table.etspec: Capitalization checked. Solves 48130.

2004-03-17 Gary Ekker <gekker@novell.com>

	Fixes #55292
	
	* gui/e-pub-utils.c (e_pub_publish): fix a crash when trying to
	publish a NULL component

2004-03-16  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/select-source-dialog.[ch]: new dialog for allowing the
	user to select a source.
