@@ -1,3 +1,10 @@
+2004-03-19  JP Rosevear  <jpr@ximian.com>
+
+	Fixes #55716
+	
+	* gui/e-cal-model.c (remove_client): unset the default if the
+	client removed was the default
+
 2004-03-19  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/calendar-component.c (update_uris_for_selection): if
@@ -6,6 +13,8 @@
 
 2004-03-19  JP Rosevear <jpr@ximian.com>
 
+	Fixes #55723
+	
 	* gui/e-day-view.c (process_component): compare ecalcomponents,
 	not icalcomponents (the compare func is borked), check recurrence
 	changes better
